[gd_scene load_steps=10 format=3 uid="uid://ct4u86ct8sqtq"]

[ext_resource type="Script" path="res://scripts/mob_phantom.gd" id="1_wwn0t"]
[ext_resource type="Texture2D" uid="uid://dygnxdwdgxq2e" path="res://assets/animations/phantom.png" id="2_71eqw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fy6v7"]
radius = 18.0
height = 118.0

[sub_resource type="Animation" id="Animation_wvnf5"]
resource_name = "cast"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 9]
}

[sub_resource type="Animation" id="Animation_tbn7p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xsvum"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u0dkt"]
_data = {
"RESET": SubResource("Animation_tbn7p"),
"cast": SubResource("Animation_wvnf5"),
"idle": SubResource("Animation_xsvum")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4bnbb"]
radius = 151.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyhkw"]
size = Vector2(60.5, 117)

[node name="mob_phantom" type="CharacterBody2D"]
script = ExtResource("1_wwn0t")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_71eqw")
hframes = 10

[node name="body" type="CollisionShape2D" parent="."]
position = Vector2(3, 5)
shape = SubResource("CapsuleShape2D_fy6v7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u0dkt")
}

[node name="view" type="Area2D" parent="."]

[node name="view_area" type="CollisionShape2D" parent="view"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_4bnbb")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(1.25, 6.5)
shape = SubResource("RectangleShape2D_lyhkw")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="HealthLabel" type="Label" parent="."]
offset_left = -43.0
offset_top = 19.0
offset_right = 45.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.819608, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Health: 100"

[node name="Hand" type="Marker2D" parent="."]
position = Vector2(-23, 0)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="view" to="." method="_on_view_body_entered"]
[connection signal="body_exited" from="view" to="." method="_on_view_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
